--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Angular CRUD App</h1>
 <nav>
   <a routerLink="/users">User List</a>
-  <a routerLink="/add">Add User</a>
+  <a routerLink="users/add">Add User</a>
 </nav>
 <router-outlet></router-outlet>
