--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user">
+<!-- <div *ngIf="user">
   <h2>User Details</h2>
 
   <div>
@@ -14,4 +14,16 @@
   <div>
     <label>Email:</label>
     <span>{{ user.email }}</span>
-  </div>
+  </div> -->
+
+  <h2>User Details</h2>
+
+<div *ngIf="user">
+  <p><strong>ID:</strong> {{ user.id }}</p>
+  <p><strong>Name:</strong> {{ user.name }}</p>
+  <p><strong>Email:</strong> {{ user.email }}</p>
+  <p><strong>Phone:</strong> {{ user.phone }}</p>
+  <p><strong>Website:</strong> {{ user.website }}</p>
+  <!-- <p><strong>Company:</strong> {{ user.company.name }}</p>
+  <p><strong>Address:</strong> {{ user.address.street }}, {{ user.address.city }}</p> -->
+</div>
